...
        TopNavigationMenu(
            testTag = "edit_profile_title",
            title = "Edit Profile",
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("back_button")) {
                    Icon(
                        Icons.Outlined.ArrowBackIosNew,
                        contentDescription = "Back arrow",
                        modifier = Modifier.size(AppDimensions.iconSizeMedium),
                        tint = MaterialTheme.colorScheme.onSurface)
                  }
...
                    }
                    navigationActions.goBack()
                  },
                  modifier =
                      Modifier.fillMaxWidth()
                          .height(AppDimensions.buttonHeightLarge) // Replaced 50.dp
                          .testTag("save_profile_button"),
                  shape = AppShapes.circleShape, // Replaced CircleShape,
                  colors =
                      ButtonDefaults.buttonColors(
                          backgroundColor = MaterialTheme.colorScheme.surfaceContainerLow)) {
                    Text(
                        modifier = Modifier.testTag("save_profile_button_text"),
...
    onPickFromGallery: () -> Unit
) {
  AlertDialog(
      onDismissRequest = { onDismiss() },
      title = {
        Text(
            "Choose Profile Picture",
            modifier = Modifier.testTag("ProfilePictureTitle"),
            color = MaterialTheme.colorScheme.onSurface)
      },
      text = {
        Text(
            "Select an option to update your profile picture.",
            modifier = Modifier.testTag("ProfilePictureButton"),
            color = MaterialTheme.colorScheme.onSurfaceVariant)
      },
      backgroundColor = MaterialTheme.colorScheme.surface,
      buttons = {
        Column(
...
                  onClick = { onTakePhoto() },
                  modifier = Modifier.testTag("PhotoOnTake"),
                  colors =
                      ButtonDefaults.buttonColors(
                          backgroundColor = MaterialTheme.colorScheme.primary)) {
                    Text(
                        "Take Photo",
                        modifier = Modifier.testTag("TakePhotoText"),
                        color = MaterialTheme.colorScheme.primary)
                  }
              Spacer(modifier = Modifier.height(AppDimensions.paddingSmall)) // Replaced 8.dp
              Button(
                  onClick = { onPickFromGallery() },
                  modifier = Modifier.testTag("PhotoOnPick"),
                  colors =
                      ButtonDefaults.buttonColors(
                          backgroundColor = MaterialTheme.colorScheme.primary)) {
                    Text(
                        "Upload from Gallery",
                        modifier = Modifier.testTag("UploadGalleryText"),
                        color = MaterialTheme.colorScheme.primary)
                  }
              Spacer(modifier = Modifier.height(AppDimensions.paddingSmall)) // Replaced 8.dp
              Button(
                  onClick = { onDismiss() },
                  modifier = Modifier.testTag("PhotoOnDismiss"),
                  colors =
                      ButtonDefaults.buttonColors(
                          backgroundColor = MaterialTheme.colorScheme.surfaceContainerLow)) {
                    Text(
                        "Cancel",
                        modifier = Modifier.testTag("CancelText"),
                        color = MaterialTheme.colorScheme.primary)
                  }
            }
      })
}
...
